updated new readme chanegs

--- a/frontend/fleet-compass/index.html
+++ b/frontend/fleet-compass/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- : Set the document title to the name of your application adhi-->
     <title>Vehicle Tracker</title>
+    <link rel="icon" type="image/png" href="src/images/logo.png" />
     <meta name="description" content="HCL Project" />
     <meta name="author" content="Adhi" />
 
